[package]
name = "get_unexpected_data"
version = "0.1.0"
authors = ["yuuya uezato <yuuya_uezato@dwango.co.jp>"]
edition = "2018"

[dependencies]
cannyls = { git = "https://github.com/yuezato/cannyls", branch = "new_patch_for_issue28"} # This branch is the PR34 of Cannyls.
structopt = "0.2"
trackable = "^0.2.21"
